# gflags

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: print.rs
impl/: Cargo.toml
impl/src/: define.rs  error.rs  infer.rs  lib.rs  name.rs  parse.rs  placeholder.rs
src/: arg.rs  atomic.rs  custom.rs  dispatch.rs  error.rs  help.rs  lib.rs  name.rs  parse.rs  registry.rs  state.rs  token.rs  value.rs
tests/: print.rs
