[package]
name = "gflags"
version = "0.3.8" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Command line flags library that does not require a central list of all the flags."
repository = "https://github.com/dtolnay/gflags"
documentation = "https://docs.rs/gflags"
readme = "README.md"
edition = "2018"
rust-version = "1.37"

[dependencies]
argv = "0.1.3"
gflags-impl = { version = "=0.3.8", path = "impl" }
inventory = "0.2"
ref-cast = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"

[workspace]
members = ["impl"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
