[package]
name = "gflags-impl"
version = "0.3.2"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macros for gflags crate"
repository = "https://github.com/dtolnay/gflags"
edition = "2018"

[lib]
proc-macro = true

[badges]
travis-ci = { repository = "dtolnay/gflags" }

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
