[package]
name = "gflags-impl"
version = "0.3.12"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Macros for gflags crate"
repository = "https://github.com/dtolnay/gflags"
documentation = "https://docs.rs/gflags"
edition = "2018"
rust-version = "1.37"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
